--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,13 @@
 # Turn rewrite engine on
 Options +FollowSymlinks
 RewriteEngine on
+RewriteRule ^(.*)/$ /$1 [L,R]
 
 # map neat URL to internal URL
 #RewriteRule ^connexion/$   index.php?action=authentification [nc]
 #RewriteRule ^evenementsFuturs/$   index.php?data=evenementsFuturs [nc]
 RewriteRule ^categorie/(.*)/$   index.php?controller=categorie&categorie=$1 [nc]
+RewriteRule ^categorie/(.*)$   index.php?controller=categorie&categorie=$1 [nc]
 #RewriteRule ^personne/insert/$   index.php?action=ajoutPersonne [nc]
 #RewriteRule ^mesCoVoiturages/([0-9]+)/$   index.php?data=mesCoVoiturages&idPers=$1 [nc,qsa]
 #RewriteRule ^coVoiturage/delete/([0-9]+)/$   index.php?idCoVoit=$1 [nc,qsa]
