--- a/.htaccess
+++ b/.htaccess
@@ -7,7 +7,8 @@ RewriteRule ^(.*)/$ /$1 [L,R]
 #RewriteRule ^connexion/$   index.php?action=authentification [nc]
 #RewriteRule ^evenementsFuturs/$   index.php?data=evenementsFuturs [nc]
 RewriteRule ^categorie/(.*)/$   index.php?controller=categorie&categorie=$1 [nc]
-RewriteRule ^categorie/(.*)$   index.php?controller=categorie&categorie=$1 [nc]
+#RewriteRule ^categorie/(.*)$   index.php?controller=categorie&categorie=$1 [nc]
+RewriteRule ^categorie/(.*)/$   index.php?controller=produit&produit=$1 [nc]
 #RewriteRule ^personne/insert/$   index.php?action=ajoutPersonne [nc]
 #RewriteRule ^mesCoVoiturages/([0-9]+)/$   index.php?data=mesCoVoiturages&idPers=$1 [nc,qsa]
 #RewriteRule ^coVoiturage/delete/([0-9]+)/$   index.php?idCoVoit=$1 [nc,qsa]
