--- a/.htaccess
+++ b/.htaccess
@@ -7,3 +7,5 @@ RewriteRule ^categorie/(.*)$   index.php?controller=categorie&categorie=$1 [nc]
 RewriteRule ^produit/(.*)$   index.php?controller=produit&produit=$1 [nc]
 RewriteRule ^account/(.*)$   index.php?controller=account&action=$1 [nc]
 RewriteRule ^account$   index.php?controller=account [nc]
+RewriteRule ^panier/(.*)$   index.php?controller=panier&action=$1 [nc]
+RewriteRule ^panier$   index.php?controller=panier [nc]
