création fichier + script fixtures

--- a/.htaccess
+++ b/.htaccess
@@ -9,3 +9,4 @@ RewriteRule ^account/(.*)$   index.php?controller=account&action=$1 [nc]
 RewriteRule ^account$   index.php?controller=account [nc]
 RewriteRule ^panier/(.*)$   index.php?controller=panier&action=$1 [nc]
 RewriteRule ^panier$   index.php?controller=panier [nc]
+RewriteRule ^search$   index.php?controller=index&action=search [nc,qsa]
