--- a/.htaccess
+++ b/.htaccess
@@ -10,3 +10,5 @@ RewriteRule ^account$   index.php?controller=account [nc]
 RewriteRule ^panier/(.*)$   index.php?controller=panier&action=$1 [nc]
 RewriteRule ^panier$   index.php?controller=panier [nc]
 RewriteRule ^search$   index.php?controller=index&action=search [nc,qsa]
+RewriteRule ^admin/(.*)$   index.php?controller=admin&action=$1 [nc,qsa]
+RewriteRule ^admin$   index.php?controller=admin [nc,qsa]
