--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@ Options +FollowSymlinks
 RewriteEngine on
 RewriteRule ^(.*)/$ /$1 [L,R]
 
-RewriteRule ^categorie/(.*)$   index.php?controller=categorie&categorie=$1 [nc]
+RewriteRule ^categorie/(.*)$   index.php?controller=categorie&categorie=$1 [nc,qsa]
 RewriteRule ^produit/(.*)$   index.php?controller=produit&produit=$1 [nc]
 RewriteRule ^account/(.*)$   index.php?controller=account&action=$1 [nc]
 RewriteRule ^account$   index.php?controller=account [nc]
